Temporary files not removed when starting up after a clean shutdown

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.7.0
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2020-09-21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In SERVER-44391, we started retaining temporary files in the data directory when starting up after a clean shutdown. This was done so that we could resume index builds that depended on the temporary files to reconstruct the external sorter state. If we failed to resume the index builds successfully during startup, there is a possibility that these temporary files will not be cleaned up on subsequent server restarts. In 4.4, we would always remove these temporary files regardless of the previous shutdown state.

            Assignee:
            Gregory Noma
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: