SERVER-50711 Clear temp directory if no internal idents are parsed on startup